# standing

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  GOVERNOR-CROSSWALK.md  IDENTITY-SCARS.md  NOTES-interruption.md  NOTICE  PROVENANCE.md  README.md  SLICE-1-CLOSEOUT.md
.github/workflows/: ci.yml
crates/standing-cli/: Cargo.toml
crates/standing-cli/src/: main.rs
crates/standing-cli/tests/: integration.rs
crates/standing-grant/: Cargo.toml
crates/standing-grant/src/: auth.rs  error.rs  grant.rs  lib.rs  lifecycle.rs  principal.rs
crates/standing-identity/: Cargo.toml
crates/standing-identity/src/: lib.rs
crates/standing-policy/: Cargo.toml
crates/standing-policy/src/: lib.rs
crates/standing-receipt/: Cargo.toml
crates/standing-receipt/src/: canonical.rs  chain.rs  error.rs  lib.rs  receipt.rs
crates/standing-store/: Cargo.toml
crates/standing-store/src/: lib.rs  replay.rs
docs/: synthetic-boundary-probes.md
