[package]
name = "standing-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "standing"
path = "src/main.rs"

[dependencies]
standing-receipt = { workspace = true }
standing-grant = { workspace = true }
standing-policy = { workspace = true }
standing-identity = { workspace = true }
standing-store = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
