[package]
name = "standing-identity"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
