[package]
name = "standing-store"
version.workspace = true
edition.workspace = true

[dependencies]
standing-receipt = { workspace = true }
standing-grant = { workspace = true }
standing-identity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
